removed max perm size